--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="merdim@todo.todo">merdim</maintainer>
+  <maintainer email="beyhy94@gmail.com">garybey</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -57,3 +57,4 @@
 
   </export>
 </package>
+
